[package]
name = "nitter-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2", features = ["derive"], optional = true }
futures-util = "0.3"
once_cell = "1.17"
percent-encoding = "2.2"
regex = "1.8"
reqwest = { version = "0.11", features = ["rustls-tls"] }
scraper = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["parsing", "formatting", "macros"] }
tokio = { version = "1.27", features = ["macros", "rt-multi-thread"], optional = true }
typed-builder = "0.14"

[features]
bin = ["dep:clap", "dep:tokio"]

[[bin]]
name = "nitter-scraper"
required-features = ["bin"]
