[package]
name = "nitter-scraper"
version = "0.2.2"
edition = "2021"
license = "GPL-3.0-only"
description = "Scrape Nitter website"
repository = "https://github.com/evanc577/nitter-scraper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
futures-util = "0.3"
once_cell = "1.18"
percent-encoding = "2.3"
regex = "1.10"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["parsing", "formatting", "macros"] }
tokio = { version = "1.33", features = ["macros", "rt-multi-thread"], default-features = false }
typed-builder = "0.18"
